--- a/analise_estatistica_dos_dados_enem.ipynb
+++ b/analise_estatistica_dos_dados_enem.ipynb
@@ -406,18 +406,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "A análise estatística realizada pelo código abaixo se baseia em dois principais aspectos:\n",
     "\n",
-    "1. **Concentração de Participantes**: O código verifica se há uma concentração significativa de participantes na faixa etária de 17 a 19 anos, com base nas médias de idade em relação ao total de participantes. O resultado obtido é que \"Não há uma concentração significativa de participantes nessa faixa etária.\" Isso significa que, estatisticamente, a proporção de participantes entre 17 e 19 anos em relação ao total não é considerada significativamente maior do que 50%.\n",
+    "1. **Concentração de Participantes:**\n",
+    "   - A concentração de participantes em uma faixa etária é calculada como a proporção de participantes nessa faixa em relação ao total de participantes.\n",
+    "   \n",
+    "   - Fórmula: `concentracao = participantes_na_faixa / total_participantes`\n",
+    "   - Se `concentracao` for maior que 0,5 (50%), há uma concentração significativa de participantes na faixa etária.\n",
     "\n",
-    "2. **Teste de Normalidade**: O código realiza um teste de normalidade (Anderson-Darling) nas médias de idade das faixas etárias de 17 a 19 anos. No entanto, para que o teste seja válido, é necessário ter um número mínimo de amostras disponíveis. O resultado obtido é que \"Não há amostras suficientes para realizar o teste de normalidade.\" Isso significa que a quantidade de dados na faixa etária específica é tão pequena que não é possível concluir estatisticamente se a distribuição das idades nessa faixa etária segue uma distribuição normal.\n",
-    "\n",
-    "Esses resultados podem não coincidir diretamente com a observação visual de um gráfico, uma vez que a análise estatística se baseia em critérios estatísticos rígidos e pode não refletir a concentração visualmente percebida de participantes nessa faixa etária."
+    "2. **Teste de Normalidade:**\n",
+    "   - O teste de normalidade D'Agostino e Pearson é usado para verificar se as médias de idade dentro da faixa etária seguem uma distribuição normal.\n",
+    "   - O teste gera um p-valor.\n",
+    "   - Se `p_value_normality` for menor que o nível de significância (`nivel_significancia`), as médias de idade não estão normalizadas; caso contrário, estão normalizadas.\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -431,20 +436,7 @@
    ],
    "source": [
     "def analisar_tabela_idades(dados_idades, faixa_etaria_min, faixa_etaria_max, nivel_significancia=0.05):\n",
-    "    \"\"\"\n",
-    "    Analisa uma tabela de faixas etárias e médias de idade para determinar se há maior concentração\n",
-    "    de participantes entre as faixas etárias de 'faixa_etaria_min' e 'faixa_etaria_max' e realiza um teste\n",
-    "    de normalidade nas médias de idade.\n",
     "\n",
-    "    Args:\n",
-    "        dados_idades (pd.DataFrame): Um DataFrame contendo as faixas etárias e médias de idade.\n",
-    "        faixa_etaria_min (int): A idade mínima da faixa etária de interesse.\n",
-    "        faixa_etaria_max (int): A idade máxima da faixa etária de interesse.\n",
-    "        nivel_significancia (float): O nível de significância para o teste de normalidade.\n",
-    "\n",
-    "    Returns:\n",
-    "        str: Uma mensagem que resume os resultados da análise.\n",
-    "    \"\"\"\n",
     "    # Filtra as faixas etárias de interesse\n",
     "    dados_filtrados = dados_idades.loc[\n",
     "        (dados_idades.index >= faixa_etaria_min) & (\n",
@@ -474,13 +466,21 @@
     "    # Retorna a mensagem de análise com quebras de linha\n",
     "    return f\"{concentracao_message}{normalidade_message}\"\n",
     "\n",
+    "print(analisar_tabela_idades(dados_idades, 17, 19))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Análise do Resultado**\n",
     "\n",
-    "# Cria a tabela de faixas etárias e médias de idade\n",
-    "dados_idades = criar_tabela_de_para_idades()\n",
     "\n",
-    "# Exemplo de uso da função para faixas etárias de 17 a 19 anos\n",
-    "resultado_analise = analisar_tabela_idades(dados_idades, 17, 19)\n",
-    "print(resultado_analise)\n"
+    "1. **Concentração de Participantes**: O código verifica se há uma concentração significativa de participantes na faixa etária de 17 a 19 anos, com base nas médias de idade em relação ao total de participantes. O resultado obtido é que \"Não há uma concentração significativa de participantes nessa faixa etária.\" Isso significa que, estatisticamente, a proporção de participantes entre 17 e 19 anos em relação ao total não é considerada significativamente maior do que 50%.\n",
+    "\n",
+    "2. **Teste de Normalidade**: O código realiza um teste de normalidade (Anderson-Darling) nas médias de idade das faixas etárias de 17 a 19 anos. No entanto, para que o teste seja válido, é necessário ter um número mínimo de amostras disponíveis. O resultado obtido é que \"Não há amostras suficientes para realizar o teste de normalidade.\" Isso significa que a quantidade de dados na faixa etária específica é tão pequena que não é possível concluir estatisticamente se a distribuição das idades nessa faixa etária segue uma distribuição normal.\n",
+    "\n",
+    "Esses resultados podem não coincidir diretamente com a observação visual de um gráfico, uma vez que a análise estatística se baseia em critérios estatísticos rígidos e pode não refletir a concentração visualmente percebida de participantes nessa faixa etária."
    ]
   },
   {
